welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugTracking:3: error: expected class or object definition
def isFacingTrail():Boolean = {
^